# rttg

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  access_individual_element.cpp  modify_tuple_elements.cpp  overloader.cpp  print_tuple_elements.cpp  vector_indices.cpp
examples/modify_tuple_elements/: CMakeLists.txt
examples/print_tuple_elements/: CMakeLists.txt
include/rttg/: get.h  invoke.h  rttg.h  to_variant.h  variant_utils.h  visit.h
include/rttg/impl/: invoke.h  overloader.h  variant_utils.h  visit.h
